# stm32f407_template_api

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  todo.md
Src/: app_active_objects.cpp  app_blink_led.cpp  app_button_irq.cpp  app_irq_and_timer.cpp  main.cpp  main.hpp
Src/bitapi/: stm32f407_ahb1.hpp  stm32f407_ahb1_gpio.hpp  stm32f407_ahb1_rcc.hpp  stm32f407_ahb2.hpp  stm32f407_ahb3.hpp  stm32f407_apb1.hpp  stm32f407_apb1_i2c.hpp  stm32f407_apb1_spi.hpp  stm32f407_apb1_usart.hpp  stm32f407_apb2.hpp  stm32f407_apb2_exti.hpp  stm32f407_apb2_spi.hpp  stm32f407_apb2_syscfg.hpp  stm32f407_apb2_usart.hpp  stm32f407_bitapi.hpp  stm32f407_clocks.hpp  stm32f407_common_spi.hpp  stm32f407_core_nvic.hpp  stm32f407_mem.hpp  stm32f407_utils.hpp
Src/drivers/: clocks.cpp  clocks.hpp  common.hpp  generic_irq_handlers.cpp  gpio.cpp  gpio.hpp  spi.cpp  spi.hpp  timer.cpp  timer.hpp  util.cpp  util.hpp
arduino/: readme.txt
arduino/spi_slave_cmd_handling/: spi_slave_cmd_handling.ino
libs/active_object/: CMakeLists.txt
libs/active_object/include/active_object/: active_object.hpp
libs/bitapi/: CMakeLists.txt
libs/bitapi/include/stm32f407_bitapi/: stm32f407_ahb1_gpio.hpp  stm32f407_ahb1_rcc.hpp  stm32f407_apb1.hpp  stm32f407_apb1_spi.hpp  stm32f407_apb1_tim2_5.hpp  stm32f407_apb1_usart.hpp  stm32f407_apb2_exti.hpp  stm32f407_apb2_syscfg.hpp  stm32f407_core_nvic.hpp  stm32f407_utils.hpp
libs/data_struct/: CMakeLists.txt
libs/data_struct/doc/: dev_notes.odp
libs/data_struct/include/data_struct/: atomic_utils.hpp  circular_queue.hpp  circular_queue_1.hpp  circular_queue_2.hpp  circular_queue_3.hpp
libs/data_struct/test/: .clang-format  CMakeLists.txt  CMakePresets.json  my_notes.md  queue_1_test.cpp  queue_2_test.cpp  queue_3_test.cpp
libs/drivers/: CMakeLists.txt
libs/drivers/include/stm32f407_drivers/: clocks.hpp  common.hpp  gpio.hpp  spi.hpp  timer.hpp  util.hpp
libs/drivers/src/: clocks.cpp  generic_irq_handlers.cpp  gpio.cpp  spi.cpp  timer.cpp  util.cpp
